codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_additional_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  Разрешить выполнение команды?

  Причина: нужен доступ к файловой системе

  Правило доступа: сеть; чтение `/tmp/readme.txt`; запись `/tmp/out.txt`

  $ cat /tmp/readme.txt

› 1. Да, выполнить (y)
  2. Нет, и дать другое указание (esc)

  Нажмите Enter для подтверждения, или Esc для отмены | Клик по варианту — выбрать
