codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_cross_thread_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  Разрешить выполнение команды?

  Тред: Robie [explorer]

  $ echo hi

› 1. Да, выполнить (y)
  2. Нет, и дать другое указание (esc)

  Нажмите Enter для подтверждения, или Esc для отмены либо O чтобы открыть тред | Клик по варианту — выбрать
