codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_permissions_prompt.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "normalize_snapshot_paths(render_overlay_lines(&view, 120))"
---

  Выдать эти разрешения?

  Причина: нужен доступ к рабочей папке

  Правило доступа: сеть; чтение `/tmp/readme.txt`; запись `/tmp/out.txt`

› 1. Да, выдать эти разрешения (y)
  2. Да, выдать эти разрешения до конца сессии (a)
  3. Нет, продолжить без разрешений (n)

  Нажмите Enter для подтверждения, или Esc для отмены | Клик по варианту — выбрать
